# rwkvstic

./: .gitignore  README.md  power.py  pyproject.toml
notebooks/: chatbot.ipynb
src/rwkvstic/: __main__.py  bench.py  load.py  preJax.py  preQuantize.py  rewor.py  rwkvMaster.py  server.py  training.py
src/rwkvstic/agnostic/: agnosticRwkv.py  agnosticRwkvLeg.py  rnn.py
src/rwkvstic/agnostic/backends/: __init__.py  base.py  coreml.py  jax.py  onnx.py  opt.py  purecuda.py  tensorflow.py  torch.py
src/rwkvstic/agnostic/backends/cuda/: cudarwkv.cu  load.py  operators.cu  operators32.cu  wrapper.cpp
src/rwkvstic/agnostic/backends/cuda/cudarwkv/: export.cpp  export.py  load.py  purecuda.py  rwkv.cpp  rwkv.cu  rwkv.h  structure.h
src/rwkvstic/agnostic/backends/cuda/cudarwkv/export/: export.py
src/rwkvstic/agnostic/backends/hip/: operators.hip  wrapper.cpp
src/rwkvstic/agnostic/backends/modules/: base.py  block.py  emb.py  layernorm.py  matmul.py  wkv.py
src/rwkvstic/agnostic/samplers/: numpy.py  torch.py  typical.py
src/rwkvstic/helpers/: loadWeights.py
src/rwkvstic/interOpLoaders/: __init__.py  chatRWKV.py  legacy.py  onnx.py  preJax.py  prequantized.py  rwkvRs.py  tflite.py  torchscript.py
src/rwkvstic/tokenizer/: __init__.py
src/rwkvstic/tools/: getBestSetup.py  getBestSetupCpu.py
src/rwkvstic/training/: model.py
src/rwkvstic/training/modules/: block.py  wkv.py
