[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rwkvstic"
version = "2.0.0"
authors = [
  { name="Harrison Vanderbyl", email="harrison.vanderbyl@gmail.com" },
]
description = "A package for loading rwkv on a larger range of devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'torch ~= 1.13.1',
  'tokenizers >= 0.13.2',
  'rwkv',
  'ninja'.
  'tqdm',
  'numpy',
]

[project.urls]
"Homepage" = "https://github.com/harrisonvanderbyl/rwkvstic"
"Bug Tracker" = "https://github.com/harrisonvanderbyl/rwkvstic/issues"